log
Wed 20 Mar 2024 01:43:35 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
5b68e83
Wed 20 Mar 2024 01:46:46 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c12d921
Wed 20 Mar 2024 01:49:59 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
eeeca12
Wed 20 Mar 2024 05:10:07 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|2
total_score: 40/70
9e1a12e
Wed 20 Mar 2024 05:11:38 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
94ae7a2
Wed 20 Mar 2024 05:25:58 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:117:22: error: suggest parentheses around comparison in operand of ‘!=’ [-Werror=parentheses]
  117 |   for (int i = 0 ; i < cadena[i] != '\0' ; i++){
      |                    ~~^~~~~~~~~~~
exercises.c:139:1: error: control reaches end of non-void function [-Werror=return-type]
  139 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7ad91e2
